# xdsl-exo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README  Snakefile  TODO  TODO.txt  TODO_CROSS_ENTROPY.txt  TODO_EXO  TODO_FFI.txt  benchmark.csv  config.yaml  pyproject.toml  setup.py
benchmarks/: TODO  plot.py  results.csv  run.py
benchmarks/kernels/: adam_exo.py  adam_jax.py  adam_neon.py  adam_torch.py  add.py  add_exo.py  add_jax.py  add_neon.py  add_torch.py  cross_entropy.py  cross_entropy_exo.py  cross_entropy_jax.py  cross_entropy_neon.py  cross_entropy_torch.py  dot.py  dot_exo.py  dot_jax.py  dot_neon.py  dot_torch.py  embedding.py  embedding_exo.py  (+38 more)
docs/: TODO  architecture.txt  design-main.md  design-patches_llvm.md  design-patches_llvmlite.md  memref-explained.txt
examples/: demo.py  matmul.py  simple.py  window_demo.py
exojit/: jitcall.c  main.py  patches_exo.py  patches_xdsl_intrinsics.py  patches_xdsl_llvm.py
exomlir/: generator.py
experiments/: references.md
leaderboard/: TODO  bench_exojit.py  bench_jax.py  bench_numpy.py  bench_original.py  bench_plain.py  bench_torch.py  jaxgpt.py  optimized.py  original.py  utils.py  vanilla.py  vanilla_patches.txt
listings/: add_one.py  take_slice.py
microgpt-benchmarks-game/: README  TODO_ATTENTION.txt  bench_exojit.py  bench_exojit_full.py  microgpt_kernels.py  run.sh  sueszli_exojit.py  sueszli_jax.py  sueszli_numpy.py  sueszli_plain.py
paper/: bench.py  report.Rmd
tests/: conftest.py  test_e2e.py  test_indexing.py  test_intrinsics.py  test_ir_generation.py
tools/: count-instructions.py  plot-heatmaps.py  plot-instruction-counts.py  process-results.py
xdsl_exo/: __init__.py  __main__.py  _compiler.py  compiler.py  generator.py  main.py  patches.py  patches_intrinsics.py  patches_llvm.py  patches_llvmlite.py  rewrites.py
xnumpy/: backends.py  main.py  patches_exo.py  patches_intrinsics.py  patches_llvmlite.py  patches_xdsl_intrinsics.py  patches_xdsl_llvm.py  utils.py
(+547 files in other folders)
