[project]
name = "xdsl-exo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "exo-lang==1.0.0",
    "xdsl==0.57.2",
    "lit",
    "numpy",
    "pytest",
    "pytest-xdist",
    "pytest-forked",
    "llvmlite",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["xdsl_exo*"]

[tool.pytest.ini_options]
addopts = "-n auto --forked -v"

[project.scripts]
xdsl-exo = "xdsl_exo.main:main"
